formatting and ref cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "deno.enable": true,
   "deno.lint": true,
   "editor.defaultFormatter": "denoland.vscode-deno",
-  "deno.config": "./deno.json",
+  "deno.config": "./deno.jsonc",
   "[typescriptreact]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   },
