--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,9 +1,12 @@
 {
   "tasks": {
-    "build": "deno task build:fmt && deno task build:lint && deno task test",
+    "build": "deno task build:fmt && deno task build:lint && deno task build:tailwind && deno task test",
     "build:fmt": "deno fmt",
     "build:lint": "deno lint",
+    "build:tailwind": "deno run -A tailwind-components.config.ts",
     "deploy": "deno task build && ftm git",
+    "dev-config": "deno task dev-tailwind",
+    "dev-tailwind": "echo '// deno-lint-ignore no-empty\n{}' > tailwind.config.js",
     "npm:build": "deno run -A scripts/npm.build.ts",
     "npm:publish": "npm publish ./build --access public",
     "test": "deno test -A ./tests/tests.ts --coverage=cov"
